--- a/src/components/navs/index.scss
+++ b/src/components/navs/index.scss
@@ -1,35 +1,7 @@
 .cc-nav-container {
-  display: flex;
-  align-items: center;
-  height: 34px;
-  width: 100%;
+  height: 42px;
+  line-height: 50px;
   background: #fff;
   border-bottom: 1px solid #d8dce5;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 12%), 0 0 3px 0 rgb(0 0 0 / 4%);
-
-  &-item {
-    border: 1px solid #d8dce5;
-    color: #495060;
-    background: #fff;
-    padding: 0 8px;
-    height: 26px;
-    display: flex;
-    align-items: center;
-    margin: 0 5px;
-    font-size: 12px;
-    cursor: pointer;
-    &-circle {
-      width: 8px;
-      height: 8px;
-      border-radius: 100%;
-      background: #fff;
-      position: relative;
-      top: -1px;
-      margin-right: 4px;
-    }
-    &-active {
-      background: #1890ff;
-      color: #fff;
-    }
-  }
 }
